--- a/6551071022_BTTKWEB_1/Q1_6551071022.html
+++ b/6551071022_BTTKWEB_1/Q1_6551071022.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bai2</title>
-    <link rel="stylesheet" href="/Styles/style.css">
+    <link rel="stylesheet" href="Styles/style.css">
 </head>
 <body>
     <table border="2" style="border-collapse: collapse; width: 600px;">
@@ -32,4 +32,5 @@
     </tr>
     </table>
 </body>
+
 </html>
