fix Cột môn học text-align: left;

--- a/6551071022_BTTKWEB_5/Q5_6551071022.html
+++ b/6551071022_BTTKWEB_5/Q5_6551071022.html
@@ -20,43 +20,43 @@
                 <th class="th">Thực hành</th>
             </tr>
                 <td rowspan="6" style="color: red; line-height: 20px;">I<br>Tin học văn phòng</th>
-                <td>Hệ điều hành Windows</td>
+                <td class="text">Hệ điều hành Windows</td>
                 <td>3</td>
                 <td>5</td>
             </tr>
             <tr>
-                <td>Sử dụng Internet</td>
+                <td class="text">Sử dụng Internet</td>
                 <td>3</td>
                 <td>5</td>
             </tr>
             <tr>
-                <td>Soạn thảo văn bản với MS Word</td>
+                <td class="text">Soạn thảo văn bản với MS Word</td>
                 <td>24</td>
                 <td>40</td>
             </tr>
             <tr>
-                <td>Tạo bài trình diễn với MS PowerPoint</td>
+                <td class="text">Tạo bài trình diễn với MS PowerPoint</td>
                 <td>9</td>
                 <td>15</td>
             </tr>
             <tr>
-                <td>Xử lý số liệu với MS Excel</td>
+                <td class="text">Xử lý số liệu với MS Excel</td>
                 <td>24</td>
                 <td>40</td>
             </tr>
             <tr>
-                <td>Tạo trang Web với MS FrontPage</td>
+                <td class="text">Tạo trang Web với MS FrontPage</td>
                 <td>9</td>
                 <td>15</td>
             </tr>
             <tr>
                 <td rowspan="2" style="color: red; line-height: 20px;">II<br>Kỹ thuật lập trình (VB.NET)</td>
-                <td>Nhập môn lập trình</td>
+                <td class="text">Nhập môn lập trình</td>
                 <td>36</td>
                 <td>60</td>
             </tr>
             <tr>
-                <td>Kỹ thuật lập trình</td>
+                <td class="text">Kỹ thuật lập trình</td>
                 <td>36</td>
                 <td>60</td>
             </tr>
