fix <legend> text-align: left;

--- a/6551071022_BTTKWEB_9/Q9_6551071022.html
+++ b/6551071022_BTTKWEB_9/Q9_6551071022.html
@@ -46,7 +46,7 @@
             <tr>
                 <td colspan="2">
                     <fieldset class="field">
-                        <legend>Số lượng đoàn khách</legend>
+                        <legend class="legend">Số lượng đoàn khách</legend>
                         <span class="text">Người lớn <input size="4"></input> Trẻ em <input size="4"></input> </span>                           
                     </fieldset>
                 </td>
